feat: Посты готовы

--- a/index.html
+++ b/index.html
@@ -86,5 +86,102 @@
         </button>
       </div>
     </nav>
+
+    <main>
+      <div class="main_posts">
+        <section class="posts_post">
+          <div class="post_header"></div>
+          <img src="src/post-image1.png" alt="Post Image" class="post_image" />
+          <div class="post_comments">
+            <div class="comments_comment">
+              <div class="comment_header">
+                <img
+                  class="comment_ico"
+                  src="src/ico-comment.png"
+                  alt="Comment"
+                />
+                <p class="comment_author">
+                  <a class="comment_author-link" href="">Jason Anderson</a>
+                  commented:
+                </p>
+              </div>
+              <div class="comment_content">
+                <p class="comment_text">
+                  Don’t sit and wait. Get out there, feel life. Touch the sun,
+                  and immerse in the sea. Keep love in your heart. A life
+                  without it is like a sunless garden when the flowers are dead.
+                  Because summer is passion, memories, light breeze, the sun
+                  that appears on the skin and caresses the face.
+                </p>
+                <p class="comment_signature">– Jason, 10:30 am</p>
+              </div>
+              <div class="comment_stats">
+                <div class="comment_stats-left-wrap">
+                  <button class="comment_stats-views">
+                    <img
+                      class="comment_stats-ico"
+                      src="src/ico-views.png"
+                      alt=""
+                    />432
+                  </button>
+                  <button class="comment_stats-comments">
+                    <img
+                      class="comment_stats-ico"
+                      src="src/ico-comment.png"
+                      alt=""
+                    />47
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="posts_post--folded">
+          <div class="post_header">
+            <p class="post_header-text">Sunset Sunset Sunset</p>
+            <div class="post_header-right-wrap">
+              <img
+                src="src/nav-ico-time.png"
+                alt="Posted"
+                class="post_header-time-ico"
+              />
+              <p class="post_header-time">53 minutes ago</p>
+              <button class="post_header-unfold">
+                <img
+                  src="src/post-ico-unfold.png"
+                  alt="More..."
+                  class="post_header-unfold-ico"
+                />
+              </button>
+            </div>
+          </div>
+        </section>
+        <section class="posts_post--folded">
+          <div class="post_header">
+            <p class="post_header-text">Morning of Siberia</p>
+            <div class="post_header-right-wrap">
+              <img
+                src="src/nav-ico-time.png"
+                alt="Posted"
+                class="post_header-time-ico"
+              />
+              <p class="post_header-time">56 minutes ago</p>
+              <button class="post_header-unfold">
+                <img
+                  src="src/post-ico-unfold.png"
+                  alt="More..."
+                  class="post_header-unfold-ico"
+                />
+              </button>
+            </div>
+          </div>
+        </section>
+      </div>
+      <div class="main_right">
+        <section class="main_profile-card"></section>
+        <section class="main_navigation-menu"></section>
+        <section class="main_posting-menu"></section>
+      </div>
+    </main>
   </body>
 </html>
