feat: Profile and Navigation leftside menu

--- a/index.html
+++ b/index.html
@@ -178,8 +178,101 @@
         </section>
       </div>
       <div class="main_right">
-        <section class="main_profile-card"></section>
-        <section class="main_navigation-menu"></section>
+        <section class="main_profile-card">
+          <div class="profile-card_photo"></div>
+          <div class="profile-card_text">
+            <p class="profile-card_name">Hanna Dorman</p>
+            <p class="profile-card_job">UX/UI designer</p>
+          </div>
+          <div class="profile-card_contacts">
+            <a href="" class="profile-card_link">
+              <img
+                src="src/ico-telegram.png"
+                alt="Trelegram"
+                class="profile-card_link-ico"
+              />
+            </a>
+            <a href="" class="profile-card_link">
+              <img
+                src="src/ico-hh.png"
+                alt="hh.ru"
+                class="profile-card_link-ico"
+              />
+            </a>
+            <a href="" class="profile-card_link">
+              <img
+                src="src/ico-twitter.png"
+                alt="Twitter"
+                class="profile-card_link-ico"
+              />
+            </a>
+          </div>
+        </section>
+        <section class="main_nav-menu--unfolded">
+          <div class="nav-menu_header">
+            <p class="nav-menu_header-text">Navigation</p>
+            <img class="nav-menu_header-arrow" src="src/nav-menu-arrow.png" alt="Fold/Unfold" />
+          </div>
+          <div class="nav-menu_section">
+            <div class="nav-menu_item">
+              <div class="nav-menu_item-left">
+                <img class="nav-menu_item-ico" src="src/nav-menu-ico-profile.png" alt="Profile"/>
+                <p class="nav-menu_item-name">My profile</p>
+              </div>
+              <div class="nav-menu_item-right">
+                <p class="nav-menu_item-value"></p>
+              </div>
+            </div>
+            <div class="nav-menu_item">
+              <div class="nav-menu_item-left">
+                <img class="nav-menu_item-ico" src="src/nav-menu-ico-balance.png" alt="Balance"/>
+                <span class="nav-menu_item-name">Balance</span>
+              </div>
+              <div class="nav-menu_item-right">
+                <p class="nav-menu_item-value--gery">$ 1,430</p>
+              </div>
+            </div>
+            <div class="nav-menu_item">
+              <div class="nav-menu_item-left">
+                <img class="nav-menu_item-ico" src="src/nav-menu-ico-connections.png" alt="Connections"/>
+                <p class="nav-menu_item-name">Connections</p>
+              </div>
+              <div class="nav-menu_item-right">
+                <p class="nav-menu_item-value--red">29</p>
+              </div>
+            </div>
+            <div class="nav-menu_item">
+              <div class="nav-menu_item-left">
+                <img class="nav-menu_item-ico" src="src/nav-menu-ico-friends.png" alt="Friends"></img>
+                <p class="nav-menu_item-name">Friends</p>
+              </div>
+              <div class="nav-menu_item-right">
+                <p class="nav-menu_item-value"></p>
+              </div>
+            </div>
+          </div>
+
+          <div class="nav-menu_section">
+            <div class="nav-menu_item">
+              <div class="nav-menu_item-left">
+                <img class="nav-menu_item-ico" src="src/nav-menu-ico-events.png" alt="Events"></img>
+                <p class="nav-menu_item-name">Events</p>
+              </div>
+              <div class="nav-menu_item-right">
+                <p class="nav-menu_item-value--green">45</p>
+              </div>
+            </div>
+            <div class="nav-menu_item">
+              <div class="nav-menu_item-left">
+                <img class="nav-menu_item-ico" src="src/nav-menu-ico-settings.png" alt="Settings"></img>
+                <p class="nav-menu_item-name">Account settings</p>
+              </div>
+              <div class="nav-menu_item-right">
+                <p class="nav-menu_item-value"></p>
+              </div>
+            </div>
+          </div>
+        </section>
         <section class="main_posting-menu"></section>
       </div>
     </main>
