--- a/index.html
+++ b/index.html
@@ -47,19 +47,25 @@
     </header>
     <nav>
       <div class="nav_left">
-        <button class="nav_tab-btn">
-          <img
-            class="nav_btn-icon"
-            src="src/nav-ico-activity.png"
-            alt=""
-          />Activity
-        </button>
-        <button class="nav_tab-btn">
-          <img class="nav_btn-icon" src="src/nav-ico-map.png" alt="" />Map
-        </button>
-        <button class="nav_tab-btn">
-          <img class="nav_btn-icon" src="src/nav-ico-time.png" alt="" />Time
-        </button>
+        <a href="index.html">
+          <button class="nav_tab-btn">
+            <img
+              class="nav_btn-icon"
+              src="src/nav-ico-activity.png"
+              alt="Activity"
+            />Activity
+          </button>
+        </a>
+        <a href="map.html">
+          <button class="nav_tab-btn">
+            <img class="nav_btn-icon" src="src/nav-ico-map.png" alt="" />Map
+          </button>
+        </a>
+        <a href="timer.html">
+          <button class="nav_tab-btn">
+            <img class="nav_btn-icon" src="src/nav-ico-time.png" alt="" />Time
+          </button>
+        </a>
       </div>
 
       <div class="nav_right">
@@ -273,7 +279,9 @@
             </div>
           </div>
         </section>
-        <section class="main_posting-menu"></section>
+        <section class="main_posting-menu">
+          <!-- TODO: Сделать меню -->
+        </section>
       </div>
     </main>
   </body>
