--- a/timer.html
+++ b/timer.html
@@ -10,7 +10,7 @@
     <header>
       <div class="header_left">
         <button class="header_back-btn">
-          <img src="" alt="" />
+          <img src="src/header-ico-back.png" alt="" />
         </button>
         <p class="header_crumbles">
           User pages <span class="header_crumbles-last">- Profile</span>
@@ -46,30 +46,48 @@
     </header>
     <nav>
       <div class="nav_left">
-        <button class="nav_tab-btn">
-          <img class="nav_btn-icon" src="" alt="" />Activity
-        </button>
-        <button class="nav_tab-btn">
-          <img class="nav_btn-icon" src="" alt="" />Map
-        </button>
-        <button class="nav_tab-btn">
-          <img class="nav_btn-icon" src="" alt="" />Time
-        </button>
+        <a href="index.html">
+          <button class="nav_tab-btn">
+            <img
+              class="nav_btn-icon"
+              src="src/nav-ico-activity.png"
+              alt="Activity"
+            />Activity
+          </button>
+        </a>
+        <a href="map.html">
+          <button class="nav_tab-btn">
+            <img class="nav_btn-icon" src="src/nav-ico-map.png" alt="" />Map
+          </button>
+        </a>
+        <a href="timer.html">
+          <button class="nav_tab-btn">
+            <img class="nav_btn-icon" src="src/nav-ico-time.png" alt="" />Time
+          </button>
+        </a>
       </div>
 
       <div class="nav_right">
         <button class="nav_tab-btn">
-          <img class="nav_btn-icon" src="" alt="" />Notes
+          <img class="nav_btn-icon" src="src/nav-ico-notes.png" alt="" />Notes
         </button>
         <button class="nav_tab-btn">
-          <img class="nav_btn-icon" src="" alt="" />Friends
+          <img
+            class="nav_btn-icon"
+            src="src/nav-ico-friends.png"
+            alt=""
+          />Friends
         </button>
         <button class="nav_tab-btn">
-          <img class="nav_btn-icon" src="" alt="" />Photos
+          <img class="nav_btn-icon" src="src/nav-ico-photos.png" alt="" />Photos
         </button>
         <button class="nav_tab-settings-btn">
-          <img class="nav_btn-icon" src="" alt="" />
-          <img class="nav_btn-list-icon" src="" alt="" />
+          <img class="nav_btn-icon" src="src/nav-ico-settings.png" alt="" />
+          <img
+            class="nav_btn-list-icon"
+            src="src/nav-ico-settings-arrow.png"
+            alt=""
+          />
         </button>
       </div>
     </nav>
