fix: HTML, CSS validation. Удалил неиспользуемые стили, и пофиксил пару тэгов.

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             </div>
             <div class="nav-menu_item">
               <div class="nav-menu_item-left">
-                <img class="nav-menu_item-ico" src="src/nav-menu-ico-friends.png" alt="Friends"></img>
+                <img class="nav-menu_item-ico" src="src/nav-menu-ico-friends.png" alt="Friends"/>
                 <p class="nav-menu_item-name">Friends</p>
               </div>
               <div class="nav-menu_item-right">
@@ -261,7 +261,7 @@
           <div class="nav-menu_section">
             <div class="nav-menu_item">
               <div class="nav-menu_item-left">
-                <img class="nav-menu_item-ico" src="src/nav-menu-ico-events.png" alt="Events"></img>
+                <img class="nav-menu_item-ico" src="src/nav-menu-ico-events.png" alt="Events"/>
                 <p class="nav-menu_item-name">Events</p>
               </div>
               <div class="nav-menu_item-right">
@@ -270,7 +270,7 @@
             </div>
             <div class="nav-menu_item">
               <div class="nav-menu_item-left">
-                <img class="nav-menu_item-ico" src="src/nav-menu-ico-settings.png" alt="Settings"></img>
+                <img class="nav-menu_item-ico" src="src/nav-menu-ico-settings.png" alt="Settings"/>
                 <p class="nav-menu_item-name">Account settings</p>
               </div>
               <div class="nav-menu_item-right">
