refactor: применил SASS для стилей и сократил BEM

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <header class="nav">
+    <header class="header">
       <div class="header__left">
         <button class="header__back-btn">
           <img src="src/header-ico-back.png" alt="" />
