fix: Nav в map и timer, поправил стили

--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
       </div>
     </nav>
 
-    <main>
+    <main class="main">
       <div class="main__posts">
-        <section class="main__post">
+        <section class="main__section main__post">
           <div class="main__post-header"></div>
           <img
             src="src/post-image1.png"
@@ -152,7 +152,7 @@
             </div>
           </div>
         </section>
-        <section class="main__post--folded">
+        <section class="main__section main__post--folded">
           <div class="main__post-header">
             <p class="post_header-text">Sunset Sunset Sunset</p>
             <div class="main__post-header-right-wrap">
@@ -172,7 +172,7 @@
             </div>
           </div>
         </section>
-        <section class="main__post--folded">
+        <section class="main__section main__post--folded">
           <div class="main__post-header">
             <p class="post_header-text">Morning of Siberia</p>
             <div class="main__post-header-right-wrap">
@@ -194,7 +194,7 @@
         </section>
       </div>
       <div class="main__right">
-        <section class="main__profile-card">
+        <section class="main__section main__profile-card">
           <div class="main__profile-card-photo"></div>
           <div class="main__profile-card-text">
             <p class="main__profile-card-name">Hanna Dorman</p>
@@ -224,7 +224,7 @@
             </a>
           </div>
         </section>
-        <section class="main_nav-menu--unfolded">
+        <section class="main__section main_nav-menu--unfolded">
           <div class="side-nav__header">
             <p class="side-nav__header-text">Navigation</p>
             <img
@@ -317,7 +317,7 @@
             </div>
           </div>
         </section>
-        <section class="main_posting-menu">
+        <section class="main__section main_posting-menu">
           <!-- TODO: Сделать меню -->
         </section>
       </div>
