--- a/timer.html
+++ b/timer.html
@@ -7,84 +7,88 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
-      <div class="header_left">
-        <button class="header_back-btn">
+    <header class="header">
+      <div class="header__left">
+        <button class="header__back-btn">
           <img src="src/header-ico-back.png" alt="" />
         </button>
-        <p class="header_crumbles">
-          User pages <span class="header_crumbles-last">- Profile</span>
+        <p class="header__crumbles">
+          User pages <span class="header__crumbles--last">- Profile</span>
         </p>
       </div>
 
-      <div class="header_right">
-        <button class="header_right-btn">
+      <div class="header__right">
+        <button class="header__right-btn">
           <img
             src="src/header-ico-stat.png"
             alt="Statistics"
-            class="header_right-btn-ico"
+            class="header__right-btn-ico"
           />
-          <span class="header_right-btn-text">Statistics</span>
+          <span class="header__right-btn-text">Statistics</span>
         </button>
-        <button class="header_right-btn">
+        <button class="header__right-btn">
           <img
             src="src/header-ico-invoces.png"
             alt="Invoices"
-            class="header_right-btn-ico"
+            class="header__right-btn-ico"
           />
           <span lass="header_right-btn-text"> Invoices </span>
         </button>
-        <button class="header_right-btn">
+        <button class="header__right-btn">
           <img
             src="src/header-ico-schedule.png"
             alt="Schedule"
-            class="header_right-btn-ico"
+            class="header__right-btn-ico"
           />
-          <span class="header_right-btn-text">Schedule</span>
+          <span class="header__right-btn-text">Schedule</span>
         </button>
       </div>
     </header>
-    <nav>
-      <div class="nav_left">
+    <nav class="nav">
+      <div class="nav__left">
         <a href="index.html">
-          <button class="nav_tab-btn">
+          <button class="nav__tab-btn">
             <img
-              class="nav_btn-icon"
+              class="nav__btn-icon"
               src="src/nav-ico-activity.png"
               alt="Activity"
             />Activity
           </button>
         </a>
         <a href="map.html">
-          <button class="nav_tab-btn">
-            <img class="nav_btn-icon" src="src/nav-ico-map.png" alt="" />Map
+          <button class="nav__tab-btn">
+            <img class="nav__btn-icon" src="src/nav-ico-map.png" alt="" />Map
           </button>
         </a>
         <a href="timer.html">
-          <button class="nav_tab-btn">
-            <img class="nav_btn-icon" src="src/nav-ico-time.png" alt="" />Time
+          <button class="nav__tab-btn">
+            <img class="nav__btn-icon" src="src/nav-ico-time.png" alt="" />Time
           </button>
         </a>
       </div>
 
-      <div class="nav_right">
-        <button class="nav_tab-btn">
-          <img class="nav_btn-icon" src="src/nav-ico-notes.png" alt="" />Notes
+      <div class="nav__right">
+        <button class="nav__tab-btn">
+          <img class="nav__btn-icon" src="src/nav-ico-notes.png" alt="" />Notes
         </button>
-        <button class="nav_tab-btn">
+        <button class="nav__tab-btn">
           <img
-            class="nav_btn-icon"
+            class="nav__btn-icon"
             src="src/nav-ico-friends.png"
             alt=""
           />Friends
         </button>
-        <button class="nav_tab-btn">
-          <img class="nav_btn-icon" src="src/nav-ico-photos.png" alt="" />Photos
-        </button>
-        <button class="nav_tab-settings-btn">
-          <img class="nav_btn-icon" src="src/nav-ico-settings.png" alt="" />
+        <button class="nav__tab-btn">
           <img
-            class="nav_btn-list-icon"
+            class="nav__btn-icon"
+            src="src/nav-ico-photos.png"
+            alt=""
+          />Photos
+        </button>
+        <button class="nav__tab-settings-btn">
+          <img class="nav__btn-icon" src="src/nav-ico-settings.png" alt="" />
+          <img
+            class="nav__btn-list-icon"
             src="src/nav-ico-settings-arrow.png"
             alt=""
           />
